2006-09-22  Juergen Wieferink  <wieferink@freenet.de>

	* term/post.trm (PS_vector): To avoid accummulated error in a long
	series of relative moves or draws, we were issuing a "stroke" command
	periodically to force an update of the absolute position. This has the
	bad side affect of resetting the current dot/dash pattern.  Fix this so
	that instead of using "stroke", we simply force an absolute vector
	before continuing. This avoids accummulated error but does not reset
	the dot/dash pattern.
	Bugfix #1542050

2006-09-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Bump required version of wxWidgets to 2.5.3 for the
	wxt terminal.

	* src/wxterminal/wxt_gui.cpp (DrawToDC): Fix double cast warnings.
	Fix a lazy constructor that seems not to be accepted on all setups.

2006-09-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (disp_value): Force clean printout of "NaN" on save, print,
	or show commands.  Without this, the value is printed as "nan.0",
	which is not parsable by set or load commands.
	Bugfix #1544347

2006-09-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Rework the checks for cairo and pango so that the error
	messages are more helpful, mostly by copying the defaults pkg-config
	messages and making them non-fatal.
	Revert the minimum version of pango to 1.10.0 but refuse to compile the
	wxWidgets terminal with pango 1.10.2.

2006-09-16  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (set format): Make documentation for missing
	<axes> argument match actual behaviour.

2006-09-15  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (DrawToDC): Fill in gray the empty space
	that has been let by a change in the aspect ratio of the window.

	* trm/wxt.trm (TERM_HELP): Try to document the window resize behaviour
	a little better.

2006-09-14  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Bump the required version of pango to 1.10.3 to fix a