@@ -1,3 +1,8 @@
+2006-09-23  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/wxt_gui.cpp (wxtPanel::OnSize): Clean floating-point
+	comparison nonsense.
+
 2006-09-22  Juergen Wieferink  <wieferink@freenet.de>
 
 	* term/post.trm (PS_vector): To avoid accummulated error in a long
